fix: scrollBar 클래스 수정

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -292,8 +292,5 @@ body {
     /* width:50px;
     height:50px; */
   }
-  .scrollBar {
-    display:none;
-  }
 }
 
